update: re-ran notebooks to account for the new field - id_base

--- a/data/data-cleaning/striver-75.ipynb
+++ b/data/data-cleaning/striver-75.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "885fdd78",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "d9760614",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "c97fb815",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "15db718b",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "3fd32ae7",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "ccfc5394",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "253cd313",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "cb4114b1",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "(75, 3)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "35eaf3bf",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "(0, 3)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "21627f7e",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "(0, 3)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "c8343959",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "8d5fcf3b",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,6 @@
      "output_type": "stream",
      "text": [
       "Filter list is empty. Trying to expand all 75 URLs.\n",
-      "Resume option is set to false. Deleted previous checkpoint file: striver-75-urls-expanded.json\n",
       "\n",
       "Processing batch 1/1\n",
       "Loaded 0 results from checkpoint\n",
@@ -217,7 +216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expanding URLs: 100%|██████████| 75/75 [00:01<00:00, 54.01it/s]"
+      "Expanding URLs: 100%|██████████| 75/75 [00:01<00:00, 67.42it/s] "
      ]
     },
     {
@@ -229,7 +228,7 @@
       "Progress saved to striver-75-urls-expanded.json\n",
       "----------------------------------------------------------------------\n",
       "\n",
-      "75/75 URLs expanded in 2.57 seconds.\n"
+      "75/75 URLs expanded in 2.30 seconds.\n"
      ]
     },
     {
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "8fbceaf2",
    "metadata": {},
    "outputs": [
@@ -259,7 +258,7 @@
        "(75, 5)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "a64cfbe5",
    "metadata": {},
    "outputs": [],
@@ -283,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "f8b681eb",
    "metadata": {},
    "outputs": [
@@ -293,7 +292,7 @@
        "(75, 6)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "cc226563",
    "metadata": {},
    "outputs": [
@@ -362,7 +361,7 @@
        "0  https://leetcode.com/problems/two-sum/  problem  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "71a2bc39",
    "metadata": {},
    "outputs": [
@@ -382,7 +381,6 @@
      "output_type": "stream",
      "text": [
       "Found 75 URLs.\n",
-      "Resume is disabled. Deleting old checkpoint...\n",
       "\n",
       "Batch 1/1: items 0-74\n",
       "Loaded 0 from checkpoint\n",
@@ -393,7 +391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching items: 100%|██████████| 75/75 [00:02<00:00, 34.46it/s]"
+      "Fetching items: 100%|██████████| 75/75 [00:01<00:00, 48.96it/s]"
      ]
     },
     {
@@ -405,7 +403,7 @@
       "Saved progress (75 items) to striver-75-info-added.json\n",
       "------------------------------\n",
       "\n",
-      "Fetched 75/75 items in 2.2s.\n"
+      "Fetched 75/75 items in 1.6s.\n"
      ]
     },
     {
@@ -417,7 +415,7 @@
     }
    ],
    "source": [
-    "# Adding id, title, platform columns\n",
+    "# Adding id_base, id, title, platform columns\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
@@ -426,17 +424,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "12d12e98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(75, 9)"
+       "(75, 10)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "eef31781",
    "metadata": {},
    "outputs": [],
