--- a/data/data-cleaning/striver-79.ipynb
+++ b/data/data-cleaning/striver-79.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "885fdd78",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "d9760614",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "c97fb815",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "15db718b",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "3fd32ae7",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "ccfc5394",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "253cd313",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "cb4114b1",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "(79, 3)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "35eaf3bf",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "(0, 3)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "f13c1b2e",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "78     String  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "e5bf44ce",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "21627f7e",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "c8343959",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "8d5fcf3b",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,6 @@
      "output_type": "stream",
      "text": [
       "Filter list is empty. Trying to expand all 79 URLs.\n",
-      "Resume option is set to false. Deleted previous checkpoint file: striver-79-urls-expanded.json\n",
       "\n",
       "Processing batch 1/1\n",
       "Loaded 0 results from checkpoint\n",
@@ -297,7 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expanding URLs: 100%|██████████| 79/79 [00:01<00:00, 48.52it/s]"
+      "Expanding URLs: 100%|██████████| 79/79 [00:01<00:00, 50.56it/s]"
      ]
     },
     {
@@ -309,7 +308,7 @@
       "Progress saved to striver-79-urls-expanded.json\n",
       "----------------------------------------------------------------------\n",
       "\n",
-      "79/79 URLs expanded in 2.87 seconds.\n"
+      "79/79 URLs expanded in 2.81 seconds.\n"
      ]
     },
     {
@@ -329,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "8fbceaf2",
    "metadata": {},
    "outputs": [
@@ -339,7 +338,7 @@
        "(79, 5)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "a64cfbe5",
    "metadata": {},
    "outputs": [],
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "f8b681eb",
    "metadata": {},
    "outputs": [
@@ -373,7 +372,7 @@
        "(79, 6)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "cc226563",
    "metadata": {},
    "outputs": [
@@ -442,7 +441,7 @@
        "0  https://leetcode.com/problems/next-permutation/  problem  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "71a2bc39",
    "metadata": {},
    "outputs": [
@@ -462,7 +461,6 @@
      "output_type": "stream",
      "text": [
       "Found 79 URLs.\n",
-      "Resume is disabled. Deleting old checkpoint...\n",
       "\n",
       "Batch 1/1: items 0-78\n",
       "Loaded 0 from checkpoint\n",
@@ -473,7 +471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching items: 100%|██████████| 79/79 [00:02<00:00, 34.95it/s]"
+      "Fetching items: 100%|██████████| 79/79 [00:02<00:00, 33.17it/s]"
      ]
     },
     {
@@ -485,7 +483,7 @@
       "Saved progress (79 items) to striver-79-info-added.json\n",
       "------------------------------\n",
       "\n",
-      "Fetched 79/79 items in 2.3s.\n"
+      "Fetched 79/79 items in 2.4s.\n"
      ]
     },
     {
@@ -497,7 +495,7 @@
     }
    ],
    "source": [
-    "# Adding id, title, platform columns\n",
+    "# Adding id_base, id, title, platform columns\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
@@ -506,17 +504,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "12d12e98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(79, 9)"
+       "(79, 10)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "eef31781",
    "metadata": {},
    "outputs": [],
