--- a/data/data-cleaning/striver-a2z.ipynb
+++ b/data/data-cleaning/striver-a2z.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "(455, 4)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "(1, 4)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "(1, 4)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "(2, 4)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "(1, 4)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "(48, 4)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,6 @@
      "output_type": "stream",
      "text": [
       "Filter list is empty. Trying to expand all 455 URLs.\n",
-      "Resume option is set to false. Deleted previous checkpoint file: striver-a2z-urls-expanded.json\n",
       "\n",
       "Processing batch 1/3\n",
       "Loaded 0 results from checkpoint\n",
@@ -311,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expanding URLs: 100%|██████████| 200/200 [00:08<00:00, 24.76it/s]\n"
+      "Expanding URLs: 100%|██████████| 200/200 [00:03<00:00, 58.00it/s] \n"
      ]
     },
     {
@@ -332,7 +331,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expanding URLs: 100%|██████████| 200/200 [00:06<00:00, 30.15it/s]\n"
+      "Expanding URLs: 100%|██████████| 200/200 [00:03<00:00, 65.20it/s] \n"
      ]
     },
     {
@@ -353,7 +352,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expanding URLs: 100%|██████████| 55/55 [00:02<00:00, 27.11it/s]"
+      "Expanding URLs: 100%|██████████| 55/55 [00:02<00:00, 18.39it/s]"
      ]
     },
     {
@@ -365,7 +364,7 @@
       "Progress saved to striver-a2z-urls-expanded.json\n",
       "----------------------------------------------------------------------\n",
       "\n",
-      "455/455 URLs expanded in 24.15 seconds.\n"
+      "455/455 URLs expanded in 16.64 seconds.\n"
      ]
     },
     {
@@ -386,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +394,7 @@
        "(455, 6)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +426,7 @@
        "(455, 7)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +499,7 @@
        "0  https://www.geeksforgeeks.org/problems/search-...  problem  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +518,6 @@
      "output_type": "stream",
      "text": [
       "Found 455 URLs.\n",
-      "Resume is disabled. Deleting old checkpoint...\n",
       "\n",
       "Batch 1/3: items 0-199\n",
       "Loaded 0 from checkpoint\n",
@@ -530,14 +528,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching items:   0%|          | 0/200 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fetching items: 100%|██████████| 200/200 [00:40<00:00,  4.97it/s]\n"
+      "Fetching items: 100%|██████████| 200/200 [00:03<00:00, 59.46it/s] \n"
      ]
     },
     {
@@ -558,7 +549,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching items: 100%|██████████| 200/200 [00:03<00:00, 60.09it/s]\n"
+      "Fetching items: 100%|██████████| 200/200 [00:03<00:00, 65.02it/s] \n"
      ]
     },
     {
@@ -579,7 +570,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching items: 100%|██████████| 55/55 [00:01<00:00, 40.50it/s]"
+      "Fetching items: 100%|██████████| 55/55 [00:02<00:00, 26.89it/s]"
      ]
     },
     {
@@ -591,7 +582,7 @@
       "Saved progress (455 items) to striver-a2z-info-added.json\n",
       "------------------------------\n",
       "\n",
-      "Fetched 455/455 items in 45.1s.\n"
+      "Fetched 455/455 items in 8.7s.\n"
      ]
     },
     {
@@ -603,7 +594,7 @@
     }
    ],
    "source": [
-    "# Adding id, title, platform columns\n",
+    "# Adding id_base, id, title, platform columns\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
@@ -612,16 +603,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(455, 10)"
+       "(455, 11)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
