--- a/data/data-cleaning/striver-sde.ipynb
+++ b/data/data-cleaning/striver-sde.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "(191, 3)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "(0, 3)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "Name: 90, dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "(20, 3)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,6 @@
      "output_type": "stream",
      "text": [
       "Filter list is empty. Trying to expand all 191 URLs.\n",
-      "Resume option is set to false. Deleted previous checkpoint file: striver-sde-urls-expanded.json\n",
       "\n",
       "Processing batch 1/1\n",
       "Loaded 0 results from checkpoint\n",
@@ -270,7 +269,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expanding URLs: 100%|██████████| 191/191 [00:06<00:00, 27.57it/s]"
+      "Expanding URLs: 100%|██████████| 191/191 [00:02<00:00, 70.42it/s] "
      ]
     },
     {
@@ -282,7 +281,7 @@
       "Progress saved to striver-sde-urls-expanded.json\n",
       "----------------------------------------------------------------------\n",
       "\n",
-      "191/191 URLs expanded in 9.93 seconds.\n"
+      "191/191 URLs expanded in 5.72 seconds.\n"
      ]
     },
     {
@@ -302,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +310,7 @@
        "(191, 5)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +342,7 @@
        "(191, 6)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +410,7 @@
        "0  https://leetcode.com/problems/set-matrix-zeroes/  problem  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +429,6 @@
      "output_type": "stream",
      "text": [
       "Found 191 URLs.\n",
-      "Resume is disabled. Deleting old checkpoint...\n",
       "\n",
       "Batch 1/1: items 0-190\n",
       "Loaded 0 from checkpoint\n",
@@ -441,7 +439,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching items: 100%|██████████| 191/191 [00:06<00:00, 30.96it/s] "
+      "Fetching items: 100%|██████████| 191/191 [00:03<00:00, 63.27it/s] "
      ]
     },
     {
@@ -453,7 +451,7 @@
       "Saved progress (191 items) to striver-sde-info-added.json\n",
       "------------------------------\n",
       "\n",
-      "Fetched 191/191 items in 6.2s.\n"
+      "Fetched 191/191 items in 3.1s.\n"
      ]
     },
     {
@@ -465,7 +463,7 @@
     }
    ],
    "source": [
-    "# Adding id, title, platform columns\n",
+    "# Adding id_base, id, title, platform columns\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
@@ -474,16 +472,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 9)"
+       "(191, 10)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
