update: neetcode sheets updated cleaned data; fully async notebooks

--- a/data/data-cleaning/nc-75.ipynb
+++ b/data/data-cleaning/nc-75.ipynb
@@ -6,14 +6,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import os\n",
-    "from utils.parse4db import problems_parse4db"
+    "%run utils/devtools.py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Reloaded package 'utils' and its submodules.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%reloadmypkg utils\n",
+    "\n",
+    "import pandas as pd\n",
+    "from utils.url2platform import *\n",
+    "from utils.standardise_url import *\n",
+    "from utils.fetch_info import *\n",
+    "from utils.dump_df_to_json import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,36 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(sheet_name) as file:\n",
-    "    raw = json.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 0 previously parsed items.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing URLs: 100%|██████████████████████████████████████████████| 75/75 [01:13<00:00,  1.03it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "nc75_parsed = problems_parse4db(raw, \"nc-75-progress.json\")"
+    "    raw = json.load(file)\n",
+    "\n",
+    "df = pd.DataFrame(raw, columns=['url'])"
    ]
   },
   {
@@ -62,8 +61,45 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://leetcode.com/problems/contains-duplicate/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://leetcode.com/problems/valid-anagram/</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "75"
+       "                                                 url\n",
+       "0  https://leetcode.com/problems/contains-duplicate/\n",
+       "1       https://leetcode.com/problems/valid-anagram/"
       ]
      },
      "execution_count": 5,
@@ -72,7 +108,7 @@
     }
    ],
    "source": [
-    "len(nc75_parsed)"
+    "df.head(2)"
    ]
   },
   {
@@ -83,21 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'id': '217LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Contains Duplicate',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/contains-duplicate/'},\n",
-       " {'id': '242LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Valid Anagram',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/valid-anagram/'},\n",
-       " {'id': '1LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Two Sum',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/two-sum/'}]"
+       "(75, 1)"
       ]
      },
      "execution_count": 6,
@@ -106,26 +128,192 @@
     }
    ],
    "source": [
-    "nc75_parsed[:3]"
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.makedirs(os.path.dirname(export_file), exist_ok=True)"
+    "# Find the duplicates\n",
+    "\n",
+    "dupes_df = df[df.duplicated(subset=\"url\", keep=False)]\n",
+    "dupes_df.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filter list is empty. Trying to expand all 75 URLs.\n",
+      "\n",
+      "Processing batch 1/1\n",
+      "Loaded 0 results from checkpoint\n",
+      "Processing 75 pending URLs in this batch\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Expanding URLs: 100%|██████████| 75/75 [00:00<00:00, 82.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress saved to neetcode-75-urls-expanded.json\n",
+      "----------------------------------------------------------------------\n",
+      "Progress saved to neetcode-75-urls-expanded.json\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "75/75 URLs expanded in 2.11 seconds.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "standardised_df = await standardise_urls_async(df, \"neetcode-75-urls-expanded.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75, 3)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "standardised_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with open(export_file, \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(nc75_parsed, f, ensure_ascii=False, indent=4)"
+    "# Adding type column\n",
+    "standardised_df['type'] = standardised_df['expanded_stripped_url'].apply(\n",
+    "    lambda url: \"problem\" if is_problem_url(url) else \"tutorial\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 75 URLs.\n",
+      "\n",
+      "Batch 1/1: items 0-74\n",
+      "Loaded 0 from checkpoint\n",
+      "Processing 75 URLs...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching items: 100%|██████████| 75/75 [00:02<00:00, 29.97it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved progress (75 items) to neetcode-75-info-added.json\n",
+      "------------------------------\n",
+      "Saved progress (75 items) to neetcode-75-info-added.json\n",
+      "------------------------------\n",
+      "\n",
+      "Fetched 75/75 items in 2.5s.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding id_base, id, title, platform columns\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "final_df = await fetch_info(standardised_df, \"neetcode-75-info-added.json\", resume=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75, 8)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump_df_to_json(final_df, export_file)"
    ]
   },
   {
