--- a/data/data-cleaning/nc-150.ipynb
+++ b/data/data-cleaning/nc-150.ipynb
@@ -2,18 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import os\n",
-    "from utils.parse4db import problems_parse4db"
+    "%run utils/devtools.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Reloaded package 'utils' and its submodules.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%reloadmypkg utils\n",
+    "\n",
+    "import pandas as pd\n",
+    "from utils.url2platform import *\n",
+    "from utils.standardise_url import *\n",
+    "from utils.fetch_info import *\n",
+    "from utils.dump_df_to_json import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,116 +44,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(sheet_name) as file:\n",
-    "    raw = json.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 21 previously parsed items.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing URLs:  14%|███████▍                                             | 21/150 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing URLs: 100%|████████████████████████████████████████████| 150/150 [02:04<00:00,  1.03it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "nc150_parsed = problems_parse4db(raw, \"nc-150-progress.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "150"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(nc150_parsed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': '217LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Contains Duplicate',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/contains-duplicate/'},\n",
-       " {'id': '242LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Valid Anagram',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/valid-anagram/'},\n",
-       " {'id': '1LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Two Sum',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/two-sum/'}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nc150_parsed[:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.makedirs(os.path.dirname(export_file), exist_ok=True)"
+    "    raw = json.load(file)\n",
+    "\n",
+    "df = pd.DataFrame(raw, columns=['url'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://leetcode.com/problems/contains-duplicate/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://leetcode.com/problems/valid-anagram/</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 url\n",
+       "0  https://leetcode.com/problems/contains-duplicate/\n",
+       "1       https://leetcode.com/problems/valid-anagram/"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the duplicates\n",
+    "\n",
+    "dupes_df = df[df.duplicated(subset=\"url\", keep=False)]\n",
+    "dupes_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filter list is empty. Trying to expand all 150 URLs.\n",
+      "\n",
+      "Processing batch 1/1\n",
+      "Loaded 0 results from checkpoint\n",
+      "Processing 150 pending URLs in this batch\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Expanding URLs: 100%|██████████| 150/150 [00:01<00:00, 76.84it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress saved to neetcode-150-urls-expanded.json\n",
+      "----------------------------------------------------------------------\n",
+      "Progress saved to neetcode-150-urls-expanded.json\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "150/150 URLs expanded in 4.32 seconds.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "standardised_df = await standardise_urls_async(df, \"neetcode-150-urls-expanded.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 3)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "standardised_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with open(export_file, \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(nc150_parsed, f, ensure_ascii=False, indent=4)"
+    "# Adding type column\n",
+    "standardised_df['type'] = standardised_df['expanded_stripped_url'].apply(\n",
+    "    lambda url: \"problem\" if is_problem_url(url) else \"tutorial\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 150 URLs.\n",
+      "\n",
+      "Batch 1/1: items 0-149\n",
+      "Loaded 149 from checkpoint\n",
+      "Processing 1 URLs...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching items:   0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching items: 100%|██████████| 1/1 [00:01<00:00,  1.02s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved progress (150 items) to neetcode-150-info-added.json\n",
+      "------------------------------\n",
+      "Saved progress (150 items) to neetcode-150-info-added.json\n",
+      "------------------------------\n",
+      "\n",
+      "Fetched 150/150 items in 1.1s.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding id_base, id, title, platform columns\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "final_df = await fetch_info(standardised_df, \"neetcode-150-info-added.json\", resume=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 8)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump_df_to_json(final_df, export_file)"
    ]
   },
   {
