--- a/data/data-cleaning/nc-250.ipynb
+++ b/data/data-cleaning/nc-250.ipynb
@@ -6,14 +6,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import os\n",
-    "from utils.parse4db import problems_parse4db"
+    "%run utils/devtools.py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Reloaded package 'utils' and its submodules.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%reloadmypkg utils\n",
+    "\n",
+    "import pandas as pd\n",
+    "from utils.url2platform import *\n",
+    "from utils.standardise_url import *\n",
+    "from utils.fetch_info import *\n",
+    "from utils.dump_df_to_json import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(sheet_name) as file:\n",
-    "    raw = json.load(file)"
+    "    raw = json.load(file)\n",
+    "\n",
+    "df = pd.DataFrame(raw, columns=['url'])"
    ]
   },
   {
@@ -37,29 +60,55 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 47 previously parsed items.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing URLs:  19%|█████████▉                                           | 47/250 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing URLs: 100%|████████████████████████████████████████████| 250/250 [05:55<00:00,  1.75s/it]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://leetcode.com/problems/concatenation-of...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://leetcode.com/problems/contains-duplicate/</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 url\n",
+       "0  https://leetcode.com/problems/concatenation-of...\n",
+       "1  https://leetcode.com/problems/contains-duplicate/"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nc250_parsed = problems_parse4db(raw, \"nc-250-progress.json\")"
+    "df.head(2)"
    ]
   },
   {
@@ -70,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "250"
+       "(250, 1)"
       ]
      },
      "execution_count": 6,
@@ -79,7 +128,7 @@
     }
    ],
    "source": [
-    "len(nc250_parsed)"
+    "df.shape"
    ]
   },
   {
@@ -90,31 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'id': '1929LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Concatenation of Array',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/concatenation-of-array/'},\n",
-       " {'id': '217LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Contains Duplicate',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/contains-duplicate/'},\n",
-       " {'id': '242LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Valid Anagram',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/valid-anagram/'},\n",
-       " {'id': '1LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Two Sum',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/two-sum/'},\n",
-       " {'id': '14LC',\n",
-       "  'type': 'problem',\n",
-       "  'title': 'Longest Common Prefix',\n",
-       "  'platform': 'LC',\n",
-       "  'href': 'https://leetcode.com/problems/longest-common-prefix/'}]"
+       "(0, 1)"
       ]
      },
      "execution_count": 7,
@@ -123,26 +148,206 @@
     }
    ],
    "source": [
-    "nc250_parsed[:5]"
+    "# Find the duplicates\n",
+    "\n",
+    "dupes_df = df[df.duplicated(subset=\"url\", keep=False)]\n",
+    "dupes_df.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filter list is empty. Trying to expand all 250 URLs.\n",
+      "\n",
+      "Processing batch 1/2\n",
+      "Loaded 0 results from checkpoint\n",
+      "Processing 200 pending URLs in this batch\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Expanding URLs: 100%|██████████| 200/200 [00:02<00:00, 96.91it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress saved to neetcode-250-urls-expanded.json\n",
+      "----------------------------------------------------------------------\n",
+      "Progress saved to neetcode-250-urls-expanded.json\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "Processing batch 2/2\n",
+      "Loaded 200 results from checkpoint\n",
+      "Processing 50 pending URLs in this batch\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Expanding URLs: 100%|██████████| 50/50 [00:00<00:00, 64.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress saved to neetcode-250-urls-expanded.json\n",
+      "----------------------------------------------------------------------\n",
+      "Progress saved to neetcode-250-urls-expanded.json\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "250/250 URLs expanded in 6.82 seconds.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "os.makedirs(os.path.dirname(export_file), exist_ok=True)"
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "standardised_df = await standardise_urls_async(df, \"neetcode-250-urls-expanded.json\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(250, 3)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "standardised_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with open(export_file, \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(nc250_parsed, f, ensure_ascii=False, indent=4)"
+    "# Adding type column\n",
+    "standardised_df['type'] = standardised_df['expanded_stripped_url'].apply(\n",
+    "    lambda url: \"problem\" if is_problem_url(url) else \"tutorial\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 250 URLs.\n",
+      "\n",
+      "Batch 1/2: items 0-199\n",
+      "Loaded 249 from checkpoint\n",
+      "Processing 1 URLs...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching items:   0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching items: 100%|██████████| 1/1 [00:00<00:00,  1.26it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved progress (250 items) to neetcode-250-info-added.json\n",
+      "------------------------------\n",
+      "Saved progress (250 items) to neetcode-250-info-added.json\n",
+      "------------------------------\n",
+      "\n",
+      "Batch 2/2: items 200-249\n",
+      "Loaded 250 from checkpoint\n",
+      "Nothing new in this batch\n",
+      "Saved progress (250 items) to neetcode-250-info-added.json\n",
+      "------------------------------\n",
+      "\n",
+      "Fetched 250/250 items in 0.9s.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding id_base, id, title, platform columns\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "final_df = await fetch_info(standardised_df, \"neetcode-250-info-added.json\", resume=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(250, 8)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump_df_to_json(final_df, export_file)"
    ]
   },
   {
